# dx12framework

./: .gitignore  CMakeLists.txt  README.md  build.bat  imgui.ini
cmake/: global_settings.cmake
res/models/: .gitignore
res/models/buddha/: buddha.gltf
res/models/bunny/: bunny.fbx  bunny_normals.fbx
res/models/house/: license.txt
res/shaders/: AS_STANDARD.hlsl  MS_BASIC.hlsl  MS_BIG.hlsl  MS_GRASS.hlsl  MS_MESHOPT.hlsl  MS_STANDARD.hlsl  PS_BASIC.hlsl  PS_GRASS.hlsl  basic.hlsl  best_so_far_ms.hlsl  fxaa.hlsl  ps_fullscreen_test.hlsl
res/shaders/debug/: PS_DEBUG.hlsl  VS_DEBUG.hlsl
res/shaders/include/: include_fullscreen.hlsl
res/shaders/mesh_pipeline/: MS_BASIC.hlsl  PS_BASIC.hlsl
res/shaders/shared/: shared_cb.h  shared_debug_cb.h
res/textures/: racoon.dds  racoon2.dds
src/: CMakeLists.txt  Camera.cpp  Camera.h  Component.cpp  Component.h  Drawable.h  DrawableCube.cpp  DrawableCube.h  Editor.cpp  Editor.h  Engine.cpp  Engine.h  Entity.cpp  Entity.h  Game.cpp  Game.h  Grass.cpp  Grass.h  Input.cpp  Input.h  MainScene.cpp  MainScene.h  Mesh.cpp  Mesh.h  MeshletStructs.h  MeshletizedModel.cpp  MeshletizedModel.h  Model.cpp  Model.h  PSOParser.cpp  PSOParser.h  PipelineState.cpp  PipelineState.h  RenderTaskList.cpp  RenderTaskList.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Shader.cpp  (+7 more)
src/DX12Resource/: DepthStencil.cpp  DepthStencil.h  RenderResourcesManager.cpp  RenderResourcesManager.h  RenderTarget.cpp  RenderTarget.h
src/DX12Wrappers/: CommandQueue.cpp  CommandQueue.h  ConstantBuffer.h  IndexBuffer.cpp  IndexBuffer.h  Resource.cpp  Resource.h  Vertex.h  VertexBuffer.cpp  VertexBuffer.h
src/DXMeshletGenerator/: D3D12MeshletGenerator.h
src/GreedyMeshletizer/: GreedyMeshletizer.cpp  GreedyMeshletizer.h  boundingSphereMeshletizer.cpp  boundingSphereMeshletizer.h  meshletizerCommon.cpp  meshletizerCommon.h  nvMeshletizer.cpp  nvMeshletizer.h
src/ResourceLoaders/: ResourceManager.cpp  ResourceManager.h  TextureLoader.cpp  TextureLoader.h
src/Serialization/: MeshSerializer.cpp  MeshSerializer.h
src/Serialization/types/: VectorSerializer.h
src/Tasks/: ClearSurfaceTask.cpp  ClearSurfaceTask.h  FXAATask.cpp  FXAATask.h  FullscreenPassTask.cpp  FullscreenPassTask.h  IRenderTask.cpp  IRenderTask.h  SimpleForwardRenderTask.cpp  SimpleForwardRenderTask.h
src/Tools/: GPUProfiler.cpp  GPUProfiler.h  MeshletBenchmark.cpp  MeshletBenchmark.h
src/debugGeometry/: DebugDrawer.cpp  DebugDrawer.h  VisualiserGeometry.cpp  VisualiserGeometry.h
src/utils/: ErrorHandler.h  Types.h  Utils.h  maths.h
